# ConnectionHelper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  binary_to_h.py  idf_component.yml  library.json  library.properties  upload.py
.github/workflows/: arduino_cli.yaml  clang-format.yaml  esp_upload_component.yaml  espidf.yaml  espidf4.yaml  espidf5.yaml  platformio.yaml  platformio_publish.yaml  pr.yaml  test.yaml
arduino/: WiFiHelper.cpp
espidf/: OtaHelper.cpp  OtaHelper.h  WiFiHelper.cpp  WiFiHelper.h
espidf/html/: ota.html
espidf/impl/: MD5Builder.cpp  MD5Builder.h  OtaHelper.cpp
examples/Simple/: WifiAndOta.ino
examples/arduino/simple/: WifiAndOta.ino  simple.ino
examples/espidf/: CMakeLists.txt
examples/espidf/main/: credentials.h  idf_component.yml  main.cpp
examples/espidf/simple/: Makefile
examples/espidf/simple/main/: CMakeLists.txt  idf_component.yml  main.cpp
html/: ota.html
src/: ConnectionHelper.h  OtaHelper.cpp  OtaHelper.h  README.md  WiFiHelper.cpp  WiFiHelper.h  ota_html.h
src/impl/: LogHelper.h  MD5Builder.cpp  MD5Builder.h  OtaHelper.cpp  WiFiHelper.cpp
